# python-featurebase

./: .gitignore  Dockerfile  Dockerfile-test  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
example/: bulkInsert.py
src/featurebase/: __init__.py  client.py
tests/: test_client.py
